# NKHook6

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-impl.yml
NKHook6-Impl/: AssemblyInfo.cpp  CMakeLists.txt  Entry.cs  Logger.cs  ModBloon.cs  NKHook6-Impl.cpp  NKHook6-Impl.h  NKHook6-Impl.sln  NKHook6-Impl.vcxproj  NKHook6-Impl.vcxproj.filters
NKHook6-Impl/Event-Patches/: CMakeLists.txt
NKHook6-Impl/Event-Patches/Bloons/: CMakeLists.txt  CreatedPatch.cs  DeletedPatch.cs  LeakedPatch.cs  MovePatch.cs  RotatePatch.cs
NKHook6-Impl/Event-Patches/Game/: CMakeLists.txt  RoundEndPatch.cs  RoundStartPatch.cs
NKHook6-Impl/Event-Patches/Other/: CMakeLists.txt
NKHook6-Impl/Event-Patches/Towers/: CMakeLists.txt  CreatedPatch.cs  DeletedPatch.cs  SelectedPatch.cs  SoldPatch.cs  UpgradePatch.cs
NKHook6-Impl/Extensions/: CMakeLists.txt  GameExt.cs  MethodExt.cs
NKHook6-Impl/Implementations/: CMakeLists.txt  ImplementationInstanceBase.cs
NKHook6-Impl/Implementations/Bloons/: BadBloon.cs  BadFortifiedBloon.cs  BfbBloon.cs  BfbFortifiedBloon.cs  BlackBloon.cs  BlackCamoBloon.cs  BlackRegrowBloon.cs  BlackRegrowCamoBloon.cs  BlueBloon.cs  BlueCamoBloon.cs  BlueRegrowBloon.cs  BlueRegrowCamoBloon.cs  CMakeLists.txt  CeramicBloon.cs  CeramicCamoBloon.cs  CeramicFortifiedBloon.cs  CeramicFortifiedCamoBloon.cs  CeramicRegrowBloon.cs  CeramicRegrowCamoBloon.cs  (+53 more)
NKHook6-Impl/NKHook6-Impl/: Entry.cs  NKHook6-Impl.csproj
NKHook6-Impl/Properties/: AssemblyInfo.cs  CMakeLists.txt
References/: CMakeLists.txt  MethodAddressToToken.db  gen.py
(+28 files in other folders)
